# ChangeLog for x11-base/nouveau-drm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Sep 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> -nouveau-drm-20090715.ebuild,
  +nouveau-drm-20090908.ebuild:
  new snapshot

  01 Aug 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> nouveau-drm-20090715.ebuild:
  fix bug 279887

  18 Jul 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> nouveau-drm-20090715.ebuild:
  warn if vesafb or uvesafb are detected

  16 Jul 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> nouveau-drm-20090715.ebuild:
  add I2C_ALGOBIT to config check

  16 Jul 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> -nouveau-drm-20090514.ebuild,
  +nouveau-drm-20090715.ebuild:
  new snapshot

  11 Jun 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> +files/drm-fix-building-with-2.6.30.patch,
  nouveau-drm-20090514.ebuild:
  fix building against kernel 2.6.30

  15 May 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> -nouveau-drm-20090510.ebuild,
  +nouveau-drm-20090514.ebuild:
  new snapshot, specify commit ID in EGIT_TREE for #269879

  10 May 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> -nouveau-drm-20090409.ebuild,
  +nouveau-drm-20090510.ebuild:
  new snapshot

  10 Apr 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> -nouveau-drm-20090326.ebuild,
  +nouveau-drm-20090409.ebuild:
  new snapshot

  30 Mar 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> -nouveau-drm-20090318.ebuild,
  +nouveau-drm-20090326.ebuild:
  new snapshot

  19 Mar 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> -nouveau-drm-20090228.ebuild,
  +nouveau-drm-20090318.ebuild:
  new snapshot

  11 Mar 2009; Christian Ruppert <idl0r@gentoo.org>