@@ -1,5 +1,5 @@
 AUX drm-fix-building-with-2.6.30.patch 1898 RMD160 a2854bf09c0d1dccea4bbda0ad72c3778f551e7c SHA1 e598be2ab1de1ed7dc127891186efa64fe0963a3 SHA256 7db3ff139a65cfaf79046d6314056dc69689b7194c57f54487e0597365f7d500
-DIST nouveau-drm-20090908.tar.gz 1126516 RMD160 8b211480ba2706b7b2b151b349187c28a31b24c1 SHA1 ad0efbb90cc642b9136dccf4e2379ea6e96dc92c SHA256 20f97e8983a866b6de819e321e2ec549ebfbbd857eab4d217688cade308c7c27
-EBUILD nouveau-drm-20090908.ebuild 994 RMD160 b37c770e26adf0c8d43f41c944eafb0a6d4b5e32 SHA1 b6d08a4f152262c190cc622b212e200f1568729d SHA256 6e5591f4bef654d34f0ab5c310e3991f80be1460af6d1e2cb3ccf446a3385e0d
-MISC ChangeLog 2395 RMD160 7d36504bc429113fd17a551a7c78f1b1532815a6 SHA1 52ab6f01d4541cc2815ead2c01bb65edca9f8d09 SHA256 209ec7c7fc097a1939f04f5b6050583470ba6fd12213685df1ee80b94596c792
+DIST nouveau-drm-20091016.tar.gz 1235123 RMD160 b3f404844a21054f1167363e5ed1c2d7ce1ee7d4 SHA1 a81ece07633b73b7e8e02d5ac54f90c1da0764ed SHA256 c489c5ba46301aa15ba1dac0c83bc5fad2ac8972e5bb5106a3c384ed8993e48b
+EBUILD nouveau-drm-20091016.ebuild 1021 RMD160 2cdac6412cea3ab56fdc13a42e836e49632b078c SHA1 7b85532131dc4cacdf0233a57f1e23794eb2a534 SHA256 5864268f1848c798154a86410ac518e30981ef128d7951751c009947b8cd2adc
+MISC ChangeLog 2605 RMD160 371f261923f6e055ec4c9bf9292a21b2df0be400 SHA1 bcc5de6a272b5a1e5633bd5ef71c83671126ea9d SHA256 0ed7d641204d84b766fcb20742012b164e6bb8696b9147562711312a5db3437f
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
