@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Oct 2009; Chi-Thanh Christopher Nguyen (chithead)
+  <chithanh@cs.tu-berlin.de> -nouveau-drm-20090908.ebuild,
+  +nouveau-drm-20091016.ebuild:
+  new snapshot, switch to master branch, use external Makefile
+
   09 Sep 2009; Chi-Thanh Christopher Nguyen (chithead)
   <chithanh@cs.tu-berlin.de> -nouveau-drm-20090715.ebuild,
   +nouveau-drm-20090908.ebuild:
